_cocktails/250207_24nation_try2/prod-000-manifest/label_required.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels1
  annotations:
    policies.kyverno.io/title: Require Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod, Label
    policies.kyverno.io/description: >-
      Define and use labels that identify semantic attributes of your application or Deployment.
      A common set of labels allows tools to work collaboratively, describing objects in a common manner that
      all tools can understand. The recommended labels describe applications in a way that can be
      queried. This policy validates that the label `app.kubernetes.io/name` is specified with some value.      
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: check-for-labels
    match:
      any:
      - resources:
          namespaces:
          - prod
          kinds:
          - Pod
    validate:
      message: "The label `cloudhrdk.com/env=prod` is required."
      pattern:
        metadata:
          labels:
            cloudhrdk.com/env: "prod"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels2
  annotations:
    policies.kyverno.io/title: Require Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod, Label
    policies.kyverno.io/description: >-
      Define and use labels that identify semantic attributes of your application or Deployment.
      A common set of labels allows tools to work collaboratively, describing objects in a common manner that
      all tools can understand. The recommended labels describe applications in a way that can be
      queried. This policy validates that the label `app.kubernetes.io/name` is specified with some value.      
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: check-for-labels
    match:
      any:
      - resources:
          namespaces:
          - beta
          kinds:
          - Pod
    validate:
      message: "The label `cloudhrdk.com/env=beta` is required."
      pattern:
        metadata:
          labels:
            cloudhrdk.com/env: "beta"
